hw03-kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  namespace: otus
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw-app
  template:
    metadata:
      labels:
        app: hw-app
    spec:
      containers:
      - name: hw
        image: kaperusov/otus-hw2:2025.04.01
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /ready
        #     port: 8000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
