hw03-kube/03-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-svc
  namespace: otus
spec:
  selector:
    app: hw-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
