hw03-kube/04-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-app-ingress
  namespace: otus
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: hw-svc
            port:
              number: 80
