hw03-kube/05-ing-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-app-ingress-rewrite
  namespace: otus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/([^/]+)/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hw-svc
            port:
              number: 80
